--- a/ShrinkWrap/ShrinkWrapPlugin/ShrinkWrapPlugin.csproj
+++ b/ShrinkWrap/ShrinkWrapPlugin/ShrinkWrapPlugin.csproj
@@ -88,7 +88,6 @@
     </ItemGroup>
     <Copy SourceFiles="$(ProjectDir)PackageContents.xml" DestinationFolder="$(TargetDir)..\Bundle\$(MSBuildProjectName).bundle" />
     <Copy SourceFiles="@(PluginBundle)" DestinationFolder="$(TargetDir)..\Bundle\$(MSBuildProjectName).bundle\Contents\" />
-    <MakeDir Directories="$(SolutionDir)Output" />
-    <ZipDirectory SourceDirectory="$(TargetDir)..\Bundle" DestinationFile="$(SolutionDir)Output\$(MSBuildProjectName).bundle.zip" Overwrite="true" />
+    <ZipDirectory SourceDirectory="$(TargetDir)..\Bundle" DestinationFile="$(SolutionDir)forgesample\wwwroot\bundles\$(MSBuildProjectName).bundle.zip" Overwrite="true" />
   </Target>
 </Project>
